--- a/examples/test.html
+++ b/examples/test.html
@@ -5,19 +5,21 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div id="div" style="width:100%; height:600px;">
+    <div id="divdom" style="width:100%; height:600px;">
     </div>
   </body>
 
-  <script src="../build/three.min.js"></script>
-  <script src="../build/ThreePlay.js"></script>
+  <script src="../build/Viewer.js"></script>
   <script>
-var draw = new ThreePlay.Draw({
-  'dom'    : document.getElementById("div"),
-  'type'   : 'glTF2',
-  'file'   : 'http://dev.imoxiu.cn/~renzhenguo/explore/WebGL/demo/model/glTF/BoomBox.gltf',
-  //'onLoad' : function() {},
-  //'onError': function() {},
+
+var draw = new Viewer.Draw('divdom');
+draw.load({
+  'type' : 'glTF2',
+  'file' : 'http://dev.imoxiu.cn/~renzhenguo/explore/WebGL/demo/model/glTF/BoomBox.gltf',
+}).then(r => {
+  // 加载成功, r 为draw对象本身
+}).catch(r => {
+  // 加载失败, r 为Error对象
 });
 
 console.log('test.html', draw);
